<resources>
    <string name="app_name">Order Karo</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="develop_by_n_muhammad_adil_ashraf">Develop by \nMuhammad Adil Ashraf</string>
    <string name="logo">Logo</string>
    <string name="enjoy_restaurant_quality_meals_n_at_home">Enjoy Restaurant Quality \n Meals at Home</string>
    <string name="next">Next</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="password">Password</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="or">or</string>
    <string name="continue_with">Continue With</string>
    <string name="facebook">facebook</string>
    <string name="google">Google</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="to_provide_you_with_the_best_dining_experience_we_need_your_permission_to_access_your_device_s_location_by_enabling_location_services_we_can_offer_personalized_restaurant_recommendations_accurate_delivery_estimates_and_ensure_a_seamless_food_delivery_experience">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <string name="bell_ring">bell ring</string>
    <string name="popular">Popular</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="main_menu">Main Menu</string>
    <string name="img">img</string>
    <string name="decreese">decreese</string>
    <string name="delete">Delete</string>
    <string name="incrse">Incrse</string>
    <string name="menu">Menu</string>
    <string name="proceed">Proceed</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="previously_buy">Previously buy</string>
    <string name="recent_buy">Recent buy</string>
    <string name="buy_again">Buy Again</string>
    <string name="spacy_fresh_crab">Spacy fresh crab</string>
    <string name="waroenk_kita">Waroenk kita</string>
    <string name="address">Address</string>
    <string name="_123456789">123456789</string>
    <string name="phone">Phone</string>
    <string name="lorem_ipsum_is_placeholder_text_print_and_publishing_industries_for_previewing_layouts_and_visual">Lorem ipsum   industries for previewing layouts and visual</string>
    <string name="email">Email</string>
    <string name="lorem_ipsum_gmail_com">lorem ipsum@gmail.com</string>
    <string name="save_information">Save Information</string>
    <string name="notifications">Notifications</string>
    <string name="edit">Edit</string>
    <string name="place_my_order">Place My Order</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_amount">Total Amount</string>
    <string name="_35">35</string>
    <string name="cash">cash</string>
    <string name="food_name">Food Name</string>
    <string name="_1_strowberry_n_2_cream_n_3_wheat">1.Strowberry \n2.Cream \n3.wheat</string>
    <string name="default_web_client_id">309899331843-mnm93romsrdepb53t0p71bo9ge5kkrtv.apps.googleusercontent.com</string>
    <string name="doller">$</string>
    <string name="logout">logout</string>
    <string name="congrats_your_order_placed">Congrats \n Your Order Placed</string>
    <string name="back_to_home">Back to Home</string>
    <string name="title_activity_congrats_bottom_sheet">CongratsBottomSheetActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">   Integer faucibus mauris sit amet finibus

    </string>
    <string name="go_to_home">Go to Home</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="burger">burger</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="order_receive">Order Received</string>
    <string name="enter_name_of_food">Enter Name of Food</string>
    <string name="_03123457891">03123457891</string>
</resources>