<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/home"
        android:enabled="true"
        />
    <item
        android:id="@+id/cartFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/cart"
        android:icon="@drawable/cart"
        android:enabled="true"

        />
    <item
        android:id="@+id/searchFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/search"
        android:icon="@drawable/search"
        android:enabled="true"

        />
    <item
        android:id="@+id/historyFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/history"
        android:icon="@drawable/history"
        android:enabled="true"

        />
    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:icon="@drawable/user"
        android:enabled="true"

        />
</menu>