<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_230sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/burger"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/burrgar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/yeon_sung_regular"
        android:text="@string/enjoy_restaurant_quality_meals_n_at_home"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/greenbuttongradient"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        android:layout_marginBottom="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="@string/develop_by_n_muhammad_adil_ashraf"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>