<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OrderPlaceActivity">

    <ImageButton
        android:id="@+id/backImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10ssp"
        android:layout_marginBottom="13dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cash"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="13dp"
        android:text="@string/edit"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_23ssp"
        app:layout_constraintBottom_toBottomOf="@+id/backImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/backImage"
        app:layout_constraintTop_toTopOf="@+id/backImage"
        app:layout_constraintVertical_bias="0.13999999" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edittextshape"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_13sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textviewshape"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/name"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edittextshape"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_13sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />

            <TextView
                android:id="@+id/userAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textviewshape"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/address"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edittextshape"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_13sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />

            <TextView
                android:id="@+id/userPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textviewshape"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/_123456789"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edittextshape"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="@font/yeon_sung_regular"
                android:hint="@string/payment_method"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:src="@drawable/cashondelivery" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edittextshape"

            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="@font/yeon_sung_regular"
                android:hint="@string/total_amount"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/foodPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yeon_sung_regular"
                    android:inputType="textMultiLine"
                    android:text="200"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_25ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView19"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:fontFamily="@font/yeon_sung_regular"
                    android:text="@string/doller"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_25ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView18"
                    app:layout_constraintTop_toTopOf="@+id/textView18" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/placeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittextshape"
        android:text="@string/place_my_order"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>